assets/css/stylesheet.scss
---
---

@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');

html {
    font-size: 26px;
    height: 100%;
}

body {
    font-family: 'Share Tech Mono', monospace;

    min-height: 100%;

    display: flex;
    flex-direction: column;
    align-items: center;

    margin: 0;
}

main {
    margin-bottom: auto;
    box-sizing: border-box;
    padding: 0 1em 1em 1em;
}

section > h2 {
    font-size: 2rem;
    text-decoration: underline;
}

h1, h2, h3, h4, h5 {
    word-break: break-word;
    & > a.link {
        color: black;
    }
}

a {
    color: #5f9ea0;
    text-decoration: none;
    display: inline-flex;
    align-items: center;

    &:hover {
        color: #4f4f4f;
        text-decoration: underline;
    }

    &:active {
        color: #000000;
        font-weight: bold;
    }

    & > .iconify {
        margin-right: 0.25rem;
    }
}

hr {
    height: 3px;
    border: none;
    background-color: black;
    width: 100%;
}

.iconify.ext-link {
    font-size: 0.75em;
}

code, pre {
    background-color: #e2e2e2;
    color: #454545;
    border: 1px solid #4f4f4f;
    border-radius: 3px;
    line-height: 1.5;
}

pre {
    padding: 0.25em;

    & code {
        border: none;
    }
}

@media (min-width: 576px) {
    html { font-size: 24px; }
    main { max-width: 576px; }
}
@media (min-width: 768px) {
    html { font-size: 22px; }
    main { max-width: 768px; }
}
@media (min-width: 992px) {
    html { font-size: 20px; }
    main { max-width: 992px; }
}
@media (min-width: 1200px) {
    html { font-size: 18px; }
    main { max-width: 1200px; }
}

